// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorMessage 스냅샷 - custom className 1`] = `
<View
  className="h-8"
>
  <Text
    className="text-sm text-red-500"
  >
    오류
  </Text>
</View>
`;

exports[`ErrorMessage 스냅샷 - 에러 없음 1`] = `
<View
  className="h-6"
/>
`;

exports[`ErrorMessage 스냅샷 - 에러 있음 1`] = `
<View
  className="h-6"
>
  <Text
    className="text-sm text-red-500"
  >
    필수 항목입니다
  </Text>
</View>
`;
